Replace GetRecordSheetsResponse with RecordSheetsPage
Removed the old mutable GetRecordSheetsResponse class and
replaced it with a new immutable value object
(RecordSheetsPage). This improves clarity and prevents
side-effects when accumulating record sheets.

Renamed XhibitDataService to XhibitS3Service to better
reflect its responsibility (interaction with S3 rather
than orchestration). Updated all references accordingly
and improved logic around pagination and error handling.

BREAKING CHANGE:
- GetRecordSheetsResponse has been removed.
- Consumers should now use RecordSheetsPage.
- XhibitDataService has been renamed XhibitS3Service.